2004-12-25  Ben Maurer  <bmaurer@ximian.com>

	* monop.cs, outline.cs, monop-completion.sh: Add MIT/X11 License.

2004-12-09  Dan Winship  <danw@novell.com>

	* outline.cs (OutlineType, OutlineOperator, OperatorFromName):
	Show overloaded operators and type conversions.
	(FormatType): fix the logic here so that, eg "System.Int32"
	becomes "int" rather than "Int32" when looking at a type in the
	System namespace.

2004-12-03  Atsushi Enomoto  <atsushi@ximian.com>

	* monop.cs : csc build fix. See bug #70185 for details.

2004-11-30  Duncan Mak  <duncan@ximian.com>

	* monop.cs (GetAssemblyNamesFromGAC): New method, calls out to
	"gacutil -l" and returns an array of Assembly fullnames. 
	(Main): Instead of probing the common_assemblies, use
	GetAssemblyNamesFromGAC. If we found the type via probing, print
	out a message noting the full type name and assembly name. This
	fixes bug #70043.
	
2004-11-11  Ben Maurer  <bmaurer@ximian.com>

	* outline.cs: Remove `public virtual' for interface methods.

2004-11-08  Ben Maurer  <bmaurer@ximian.com>

	* outline.cs: If a type is in the namespace that we
	are looking at right now, dont print out the fullname
	this cuts down on verbosity
	
	* outline.cs: Cut the extra whitespace.

	* outline.cs: Report sealed and abstract

2004-10-27  John Luke  <john.luke@gmail.com>

	* outline.cs: report [Obsolete] types

2004-09-22  John Luke  <john.luke@gmail.com>

	* outline.cs: use simpler IsDefined method
	for checking params and [Flags]

2004-09-18  John Luke  <john.luke@gmail.com>

	* outline.cs: add const = value; for const fields (Ben's idea)
	detect ParamArrayAttribute for parameters

2004-09-03  John Luke  <john.luke@gmail.com>
	
	* monop.cs: report CLSCompliant for assemblies

2004-08-15  John Luke  <john.luke@gmail.com>

	* monop.cs: add declared-only option
	* outline.cs: add limited attribute support (only for
	[Serializable] and [Flags])

2004-08-13  John Luke  <john.luke@gmail.com>

	* monop.cs: add MONO_PATH support
