@@ -2,5 +2,5 @@ TODO
 ----
 
 	* handle explicit vs. implicit interfaces
-	* handle ~ based paths (ex -r:~/foo.dll)
 	* improve commandline handling
+		(arguments should be order independent)
